up-webhook/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneyman-up-webhook
  labels:
    app: moneyman-up-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneyman-up-webhook
  template:
    metadata:
      labels:
        app: moneyman-up-webhook
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: moneyman-up-webhook
          image: "ghcr.io/codingric/moneyman/up-webhook"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/etc/up-webhook"
              name: config
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: moneyman-up-webhook
